<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/logo"
/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/mensaje_portada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="380dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_corners"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CorreoLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:hint="@string/correo_login"
            style="@style/MyTextInputLayoutFilledBox"
            android:paddingTop="30dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingStart="0dp"
                android:paddingBottom="5dp"
                android:paddingTop="30dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="30dp"
            android:hint="@string/contraseña_login"
            app:endIconMode="password_toggle"
            style="@style/MyTextInputLayoutFilledBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingStart="0dp"
                android:paddingBottom="5dp"
                android:background="@color/white"
                android:paddingTop="30dp"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnIngresar"
            android:layout_width="180dp"
            android:layout_marginStart="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            style="@style/ColorParaBoton"
            android:text="@string/boton_ingresar"
            android:background="@drawable/button_background"
            android:onClick="loginUser"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOlvideContra"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_no_border"
                android:padding="10dp"
                android:text="@string/boton_olvideContra"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textStyle="normal"
                />

            <Button
                android:id="@+id/btnNuevoUsuario"
                android:layout_width="115dp"
                android:layout_height="50dp"
                android:layout_marginStart="45dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_no_border"
                android:padding="10dp"
                android:text="@string/boton_nuevaCuenta"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textStyle="normal"
                android:onClick="irRegistro"/>
        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>